trunk/Archive2/08/fb7516e4443e28/output
main.cpp:10:16: error: storage class specified for 'a'
     extern int a;
                ^
main.cpp:19:8: error: 'int A::a' is not a static member of 'struct A'
 int A::a = 4;
        ^
